mds: judge "was_revoking" correctly

_revokes not empty means there was a revoke

Fixes: http://tracker.ceph.com/issues/39349
Signed-off-by: Xuehan Xu <xuxuehan@360.cn>